fix(pages): overflow problems

--- a/assets/global.css
+++ b/assets/global.css
@@ -2,7 +2,7 @@
    color-scheme: dark
 }
 
-html, body, #__bloodlake, #__layout {
+html, body, #__secondsky, #__layout {
    @apply w-full h-full
 }
 
@@ -11,9 +11,11 @@ html, body {
    background: rgb(0,0,0);
 }
 
-body {
+axhl-content {
+   @apply w-full;
    background: radial-gradient(at top, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 25%, rgba(31, 4, 10, 0.507) 50%, rgba(0,0,0,1) 75%, rgba(0,0,0,1) 100%);
-   background-repeat: no-repeat
+   background-repeat: no-repeat;
+   background-attachment: fixed;
 }
 
 h1 {
@@ -66,7 +68,17 @@ a {
 
 .axhl__work {
    @apply border-crimson-100 bg-black border no-underline;
-   background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgba(0,0,0,0) 100%);
+   z-index: 1
+}
+
+.axhl__work:before {
+   content: "";
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   top: 0;
+   left: 0;
+   background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgba(0, 0, 0, 0.75) 50%, rgba(0,0,0,0.5) 100%)
 }
 
 .axhl__work img {
